[metadata]
name = deatf
version = 1.0
author = Ivan Hidalgo
author_email = ivanhcenalmor@gmail.com
description = Distributed Evolutionary Algorithms in TensorFlow (DEATF) is a framework where networks generated with TensorFlow are evolved via DEAP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IvanHCenalmor/deatf
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5, !=3.9.*'
include_package_data = True
